# opentaxonomy

./: .gitignore  README.md  pyproject.toml  taxonomix-app.html
.claude/: settings.local.json
files/: README.md  digital_subscriptions.yaml  dining_out.yaml  discretionary.yaml  expenditure.yaml  groceries.yaml  placement_map.yaml  prima-seed.yaml  seed.yaml
src/opentaxonomy/: cli.py
src/opentaxonomy/commands/: create.py  expand.py  run.py  test.py
src/opentaxonomy/io/: base.py  db_sources.py  file_sources.py
src/opentaxonomy/llm/: client.py  create_flow.py  expand_flow.py  prompts.py  run_flow.py  schemas.py
src/opentaxonomy/utils/: canonical_id.py
