[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentaxonomy"
version = "0.1.2"
description = "LLM-powered semantic taxonomy generator for raw categorical data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
opentaxonomy = "opentaxonomy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opentaxonomy"]
